Fixed transaction table overflowing.

--- a/web/app.fluidity.money/app/styles/dashboard/home.css
+++ b/web/app.fluidity.money/app/styles/dashboard/home.css
@@ -55,7 +55,7 @@ section#transactions {
 }
 
 .transaction-table {
-  width: 100%;
+  max-width: 100%;
 }
 
 @media (max-width: 850px) {
